re PR target/43610 (ICE: in prepare_float_lib_cmp, at optabs.c:4392 with -fno-trapping-math and _Decimal64 comparison)

2010-05-09  Paolo Bonzini  <bonzini@gnu.org>

	PR target/43610
	* optabs.c (prepare_float_lib_cmp): Allow reversing the comparison
	even if !FLOAT_LIB_COMPARE_RETURNS_BOOL.  Always compute true_rtx and
	false_rtx.  Use false_rtx to compute the correct *ptest for reversed
	comparisons for which !FLOAT_LIB_COMPARE_RETURNS_BOOL.

From-SVN: r159813